test/nginx-self-signed/nginx-ingress-selfsigned.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx-ingress-class
  tls:
    - hosts:
        - kibo.org
      secretName: kibo-selfsigned-cert-secret # Set-up here auth\cert\kibo-selfsigned-cert-secret.yaml
  rules:
    - host: kibo.org # A locally defined hostname
      http:
        paths:
          - pathType: Prefix
            path: "/app1"
            backend:
              service:
                name: nginx-svc-1
                port:
                  number: 1234 # The port number exposed by the service, not necessarily the container port
          - pathType: Prefix
            path: "/app2"
            backend:
              service:
                name: nginx-svc-2
                port:
                  number: 1234 # The port number exposed by the service, not necessarily the container port
